<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:textSize="@dimen/title_size"
        android:textColor="@color/green"/>

    <Button
        android:id="@+id/start"
        android:text="@string/start"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape1" />

    <Button
        android:id="@+id/count"
        android:text="@string/count"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape1" />

    <Button
        android:id="@+id/option"
        android:text="@string/option"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape1" />

    <Button
        android:id="@+id/about"
        android:text="@string/about"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape1" />

</LinearLayout>
