<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/start_vertical_margin"
    android:paddingBottom="@dimen/start_vertical_margin"
    tools:context="org.elvalad.sudoku.StartActivity">

    <org.elvalad.sudoku.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num_1"
            android:text="@string/num_1"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_2"
            android:text="@string/num_2"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_3"
            android:text="@string/num_3"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_4"
            android:text="@string/num_4"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_5"
            android:text="@string/num_5"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_6"
            android:text="@string/num_6"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_7"
            android:text="@string/num_7"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_8"
            android:text="@string/num_8"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

        <Button
            android:id="@+id/num_9"
            android:text="@string/num_9"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time:"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:layout_weight="2"/>

        <Chronometer
            android:id ="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format="%s"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:layout_weight="25"/>

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pause"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:background="@drawable/shape2"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>